<resources>
    <string name="app_name">Health at Home</string>
    <string name="username">Username</string>
    <string name="Password">Password</string>
    <string name="Sign_In">Sign In</string>
    <string name="ForgotPassword">Forgot Password</string>
    <string name="title_activity_productos">Productos</string>
    <string name="Espera">Espera!...</string>
    <string name="Mensaje">Desea salir de la Aplicacion?</string>
    <string name="Mensaje2">¿Desea cerrar sesión?</string>
    <string name="large_text">
        "Ejemplo.\n\n"

        "otro parrafo.\n"
        "separados.\n"
        "punto aparte.\n\n"

        "Bold, graphic, intentional.\n\n"
    </string>
    <string name="action_settings">Settings</string>
    <string name="title_servicios_list">Productos</string>
    <string name="title_servicios_detail">Servicios Detail</string>
    <string name="ingresa_ac_su_usuario_email">Ingresa su Correo</string>
    <string name="title_activity_search">SearchActivity</string>

    <string name="action_help">Help</string>
    <string name="action_about">About</string>
    <string name="action_search">search</string>
    <string name="search">Search Demo</string>
    <string name="submitted">submitted</string>
    <string name="title_activity_maps">Map</string>

    <string name="Fullname">Nombre Completo</string>
    <string name="Documentodeidentidad">Dni</string>
    <string name="Contactphone">Número de teléfono</string>
    <string name="titulartajeta">Nombre de Titular Tarjeta de Crédito</string>
    <string name="numerotajeta">Número Tarjeta de Crédito</string>
    <string name="fechaexpiracion">fecha Expiración Tarjeta de Crédito</string>
    <string name="codigoseguridadtarjeta">Código Seguridad Tarjeta de Crédito</string>
    <string name="Ciudad">Ingrese su Ciudad</string>
    <string name="Pais">Ingrese su País</string>
    <string name="Estado">Ingrese su Estado</string>
    <string name="Codigopostal">Ingrese Código Postal</string>
    <string name="Direccion1">Ingrese su Dirección</string>
    <string name="Direccion2">Ingrese su Dirección</string>

    <string name="title_activity_display">Transport Display</string>
    <string name="firebase_path" translatable="false">locations</string>
    <string name="firebase_email" translatable="false">orgasmitolento69@gmail.com</string>
    <string name="firebase_password" translatable="false">$uP3rMeg@</string>

    <string-array name="map_types_list">
        <item>None</item>
        <item>Normal</item>
        <item>Satellite</item>
        <item>Hybrid</item>
        <item>Terrain</item>
    </string-array>


</resources>
